# src/routes/authRoutes.js
@@ -1,0 +1,7 @@
+const express = require("express");
+const router = new express.Router();
+const authController = require("../controllers/authController");
+
+router.get("/logout", authController.logout);
+
+module.exports = router;
