# src/routes/index.js
@@ -1,12 +1,17 @@
 const router = require("express").Router();
 const leadRoutes = require("./leadRoutes");
 const companyRoutes = require("./companyRoutes");
+const authRoutes = require("./authRoutes");
 
 router.get("/", (req, res) => {
-  //#swagger.tags=["Welcome"]
-  res.send("Welcome to Leads Directory Project");
+  //#swagger.tags=["Home"]
+  res.send(
+    req.session.user !== undefined
+      ? `Logged in as ${req.session.user.displayName}`
+      : "Logged Out",
+  );
 });
-
+router.use("/", authRoutes);
 router.use("/leads", leadRoutes);
 router.use("/companies", companyRoutes);
 
