# src/routes/leadRoutes.js
@@ -2,6 +2,7 @@ const express = require("express");
 const router = new express.Router();
 const leadController = require("../controllers/leadController");
 const leadValidate = require("../utils/lead-validation");
+const isAuthenticated = require("../utils/auth").isAuthenticated;
 
 router.get("/", leadController.getAllLeads);
 router.get(
@@ -12,12 +13,14 @@ router.get(
 );
 router.post(
   "/",
+  isAuthenticated,
   leadValidate.addLeadRules(),
   leadValidate.checkData,
   leadController.saveLead,
 );
 router.put(
   "/:id",
+  isAuthenticated,
   leadValidate.addMongoIdRules(),
   leadValidate.addLeadRules(),
   leadValidate.checkData,
@@ -25,6 +28,7 @@ router.put(
 );
 router.delete(
   "/:id",
+  isAuthenticated,
   leadValidate.addMongoIdRules(),
   leadValidate.checkData,
   leadController.deleteLead,
